fix:z-index of bg img, links are now clickable

--- a/frontend/src/components/Results.css
+++ b/frontend/src/components/Results.css
@@ -1,5 +1,5 @@
 #body {
-  width: 90%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
